fix: visual bugs and overflow:hidden

--- a/src/components/NavbarMobile/NavbarMobile.module.scss
+++ b/src/components/NavbarMobile/NavbarMobile.module.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100vh;
   background: variables.$primary-red;
-  transform: translateY(-101%);
+  transform: translateY(-200%);
   transition: transform 0.3s ease-in-out;
 
   &.active {
