--- a/src/components/PostListTitle/PostListTitle.module.scss
+++ b/src/components/PostListTitle/PostListTitle.module.scss
@@ -4,5 +4,5 @@
   padding-bottom: 2rem;
   margin-bottom: 5rem;
   font-size: 3rem;
-  border-bottom: 1px solid #e5e9ec;
+  border-bottom: 0.1rem solid #e5e9ec;
 }
