--- a/src/components/SectionTitle/SectionTitle.scss
+++ b/src/components/SectionTitle/SectionTitle.scss
@@ -70,7 +70,14 @@
   }
 
   .sectionTitle.services {
+    margin-right: 1rem;
+  }
+}
+
+@media (max-width: 676px) {
+  .sectionTitle.services {
     margin-left: 1rem;
+    margin-right: 0;
 
     &::before {
       left: -0.5rem;
